--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -272,32 +272,32 @@
                     <hr>                  
                     <div class="row">
                       <div class="col-xs-3">
-                      <h6>{{worth_current}} </h6>
+                      <h5>{{worth_current}} </h5>
                       </div>
                       <div class="col-xs-3">
-                      <h6>{{price_current}} </h6>
+                      <h5>{{price_current}} </h5>
                       </div>
                       <div class="col-xs-3">
-                      <h6>{{number_of_backers}} </h6>
+                      <h5>{{number_of_backers}} </h5>
                       </div>
                       <div class="col-xs-3">
-                      <h6>{{reward_yield_current}} </h6>
+                      <h5>{{reward_yield_current}} </h5>
 
                       </div>
 
                     </div>
                     <div class="row">
                       <div class="col-xs-3">
-                        <h6 class="vtop"><small>Worth</small></h6>
+                        <h6 class="vtop">Worth</h6>
                       </div>
                       <div class="col-xs-3">
-                       <h6 class="vtop"><small>Price/piece</small></h6>
+                       <h6 class="vtop">Price/piece</h6>
                      </div>
                      <div class="col-xs-3">
-                       <h6 class="vtop"><small>Backers</small></h6>
+                       <h6 class="vtop">Backers</h6>
                      </div>
                      <div class="col-xs-3">
-                      <h6 class="vtop"><small>Reward yield</small></h6>
+                      <h6 class="vtop">Reward yield</h6>
                     </div>
                   </div>
 
