--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -272,16 +272,16 @@
                     <hr>                  
                     <div class="row">
                       <div class="col-xs-3">
-                      <h5>{{worth_current}} </h5>
+                      <h5><b>{{worth_current}}</b> </h5>
                       </div>
                       <div class="col-xs-3">
-                      <h5>{{price_current}} </h5>
+                      <h5><b>{{price_current}}</b>  </h5>
                       </div>
                       <div class="col-xs-3">
-                      <h5>{{number_of_backers}} </h5>
+                      <h5><b>{{number_of_backers}}</b>  </h5>
                       </div>
                       <div class="col-xs-3">
-                      <h5>{{reward_yield_current}} </h5>
+                      <h5><b>{{reward_yield_current}}</b>  </h5>
 
                       </div>
 
