--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -291,13 +291,13 @@
                         <h6 class="vtop">Worth</h6>
                       </div>
                       <div class="col-xs-3">
-                       <h6 class="vtop">Price/piece</h6>
+                       <h6 class="vtop">Price</h6>
                      </div>
                      <div class="col-xs-3">
                        <h6 class="vtop">Backers</h6>
                      </div>
                      <div class="col-xs-3">
-                      <h6 class="vtop">Reward yield</h6>
+                      <h6 class="vtop">Reward</h6>
                     </div>
                   </div>
 
