--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -269,7 +269,7 @@
 
 
 
-                    <hr>                  
+                    <hr class="thin-hr">                  
                     <div class="row">
                       <div class="col-xs-3">
                       <h5><b>{{worth_current}}</b> </h5>
