--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -263,14 +263,14 @@
                        {{{verified_html}}}
                      </div>
                    </div>
-                   
+
                    <div class="discover-desc">
                     <h4> {{description}} </h4>
                   </div>
 
 
                   <hr class="thin-hr">                  
-                    <div class="row">
+                    <div class="row discover-values">
                       <div class="col-xs-3">
                       <h5><b>{{worth_current}}</b> </h5>
                       </div>
