--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -270,17 +270,17 @@
 
 
                   <hr class="thin-hr">                  
-                    <div class="row discover-values">
-                      <div class="col-xs-3">
+                    <div class="row">
+                      <div class="col-xs-3 discover-values">
                       <h5><b>{{worth_current}}</b> </h5>
                       </div>
-                      <div class="col-xs-3">
+                      <div class="col-xs-3 discover-values">
                       <h5><b>{{price_current}}</b>  </h5>
                       </div>
-                      <div class="col-xs-3">
+                      <div class="col-xs-3 discover-values">
                       <h5><b>{{number_of_backers}}</b>  </h5>
                       </div>
-                      <div class="col-xs-3">
+                      <div class="col-xs-3 discover-values">
                       <h5><b>{{reward_yield_current}}</b>  </h5>
 
                       </div>
