--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -255,7 +255,7 @@
 
                     <br>
                     <h2><b><a href="/creators/main/{{creators_name}}"> {{creators_name}} </a></b></h2>
-                    <div class="row">
+                    <div class="row discover-under-name">
                       <div class="col-xs-6">
                       <small> {{category_names}} </small>
                       </div>
@@ -270,17 +270,17 @@
 
 
                   <hr class="thin-hr">                  
-                    <div class="row">
-                      <div class="col-xs-3 discover-values">
+                    <div class="row discover-values">
+                      <div class="col-xs-3">
                       <h5><b>{{worth_current}}</b> </h5>
                       </div>
-                      <div class="col-xs-3 discover-values">
+                      <div class="col-xs-3">
                       <h5><b>{{price_current}}</b>  </h5>
                       </div>
-                      <div class="col-xs-3 discover-values">
+                      <div class="col-xs-3">
                       <h5><b>{{number_of_backers}}</b>  </h5>
                       </div>
-                      <div class="col-xs-3 discover-values">
+                      <div class="col-xs-3">
                       <h5><b>{{reward_yield_current}}</b>  </h5>
 
                       </div>
