--- a/resources/testweb/creators_register.html
+++ b/resources/testweb/creators_register.html
@@ -64,7 +64,7 @@
          <ul class="nav navbar-nav">
           <li><a href="/">Home</a></li>
           <li><a href="/discover">Discover</a></li>
-          <li class="active"><a href="/creators_register">Creators</a></li> 
+          <li class="active"><a href="/creators_register">Start</a></li> 
           <li><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
