--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -69,7 +69,7 @@
      <ul class="nav navbar-nav">
       <li class="active"><a href="/">Home</a></li>
       <li><a href="/discover">Discover</a></li>
-      <li><a href="/creators_register">Creators</a></li> 
+      <li><a href="/creators_register">Start</a></li> 
       <li><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
