--- a/resources/web/creatordashboard.html
+++ b/resources/web/creatordashboard.html
@@ -64,7 +64,7 @@
                 <ul class="nav navbar-nav">
                   <li class="active"><a href="/carousel">Home</a></li>
                   <li><a href="/discover">Discover</a></li>
-                  <li><a href="/creators_register">Creators</a></li> 
+                  <li><a href="/creators_register">Start</a></li> 
                   <li><a href="/userdashboard" id="userdashboardhref" class="hide">Dashboard</a></li>
                   <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
                   <li><a href="#logout" id="logouthref" class="hide">Log Out</a></li>
