--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -139,7 +139,20 @@
               </div>
             </div>
             <div class="item">
-              <div class="900-image" align="center">
+             <div class="900-image" align="center">
+              <!-- <img src="img/group3.jpg" alt="Third slide"> -->
+              <div style="width:100%; height: 400px; background: url('img/user_interface.png') no-repeat center 15% transparent;">&nbsp;</div>
+            </div>
+            <div class="container">
+              <div class="carousel-caption">
+                <h1><b>An interactive trading interface</b></h1>
+                <p></p>
+                <p><a class="btn btn-lg btn-primary" href="#fund_creativity" role="button">Learn more</a></p>
+              </div>
+            </div>
+
+            <div class="item">
+             <div class="900-image" align="center">
                <!--  <img src="img/group.jpg"alt="Second slide"> -->
                <div style="width:100%; height: 400px; background: url('img/group.jpg') no-repeat center 15% transparent;">&nbsp;</div>
              </div>
@@ -147,29 +160,17 @@
               <div class="carousel-caption">
                 <h1><b>Helping content creators do what they do best</b></h1>
                 <p></p>
-                <p><a class="btn btn-lg btn-primary" href="#fund_creativity" role="button">Learn more</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="900-image" align="center">
-              <!-- <img src="img/group3.jpg" alt="Third slide"> -->
-              <div style="width:100%; height: 400px; background: url('img/group3.jpg') no-repeat center 15% transparent;">&nbsp;</div>
-            </div>
-            <div class="container">
-              <div class="carousel-caption">
-                <h1><b>Get creative projects in motion</b></h1>
-                <p></p>
                 <p><a class="btn btn-lg btn-primary" href="/discover" role="button">Discover</a></p>
               </div>
             </div>
           </div>
         </div>
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
-      </div><!-- /.carousel -->
+      </div>
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+    </div><!-- /.carousel -->
 
-      <!-- img/500x9698053846_b71848a973_o.jpg -->
+    <!-- img/500x9698053846_b71848a973_o.jpg -->
 
 
       <!-- Marketing messaging and featurettes
