--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -141,26 +141,27 @@
             <div class="item">
               <div class="900-image" align="center">
                <!--  <img src="img/group.jpg"alt="Second slide"> -->
-               <div style="width:100%; height: 400px; background: url('img/user_interface.png') no-repeat center 15% transparent;">&nbsp;</div>
+               <div style="width:100%; height: 400px; background: url('img/group.jpg') no-repeat center 15% transparent;">&nbsp;</div>
              </div>
              <div class="container">
               <div class="carousel-caption">
                 <h1><b>Helping content creators do what they do best</b></h1>
                 <p></p>
-                <p><a class="btn btn-lg btn-primary" href="/discover" role="button">Discover</a></p>
+                <p><a class="btn btn-lg btn-primary" href="#fund_creativity" role="button">Learn more</a></p>
               </div>
             </div>
           </div>
           <div class="item">
             <div class="900-image" align="center">
               <!-- <img src="img/group3.jpg" alt="Third slide"> -->
-              <div style="width:100%; height: 400px; background: url('img/group3.jpg') no-repeat center 15% transparent;">&nbsp;</div>
+             <!--  <div style="width:100%; height: 400px; background: url('img/group3.jpg') no-repeat center 15% transparent;">&nbsp;</div> -->
+             <img class="featurette-image img-responsive" src="img/user_interface.jpg" alt="Generic placeholder image">
             </div>
             <div class="container">
               <div class="carousel-caption">
-                <h1><b>An interactive trading interface</b></h1>
+                <h1><b>Get creative projects in motion</b></h1>
                 <p></p>
-                <p><a class="btn btn-lg btn-primary" href="#fund_creativity" role="button">Learn more</a></p>
+                <p><a class="btn btn-lg btn-primary" href="/discover" role="button">Discover</a></p>
               </div>
             </div>
           </div>
