--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -154,8 +154,7 @@
           <div class="item">
             <div class="900-image" align="center">
               <!-- <img src="img/group3.jpg" alt="Third slide"> -->
-             <!--  <div style="width:100%; height: 400px; background: url('img/group3.jpg') no-repeat center 15% transparent;">&nbsp;</div> -->
-             <img class="featurette-image img-responsive" src="img/user_interface.jpg" alt="Generic placeholder image">
+              <div style="width:100%; height: 400px; background: url('img/group3.jpg') no-repeat center 15% transparent;">&nbsp;</div>
             </div>
             <div class="container">
               <div class="carousel-caption">
@@ -296,7 +295,7 @@
 
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="img/comics.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" src="img/user_interface.png" alt="Generic placeholder image">
         </div>
       </div>
 
