--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -295,7 +295,7 @@
 
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="img/user_interface.png" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" src="img/user_interface2.png" alt="Generic placeholder image">
         </div>
       </div>
 
