--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -262,7 +262,7 @@
         <div class="col-md-7">
           <h2 class="featurette-heading">The world's first international funding platform</h2>
         
-          <p class="lead">Using the <a href="/FAQ#why_use_bitcoin_instead_of_dollars">bitcoin network</a> as a universal payment processor ensures that anyone can fund who they want, anywhere in the world. Display the value of your pieces in any one of <b>20</b> <a href="/FAQ#how_does_currency_conversion_work">currencies</a>, on an interactive, funding <b>dashboard</b>. Fund projects in Visual Arts, Comics, Design, Dance, Education, Film and Video, Environment, Music, Fashion, Tech, Photography, Theatre, Food, Health, Writing and Lit, Sports, Small Business, Gaming, Crafts, and Journalism. <a href="https://coinbase.com/">Coinbase</a> is used as the payment processor, which ensures free transactions within the bitcoin network.
+          <p class="lead">Using the <a href="/FAQ#why_use_bitcoin_instead_of_dollars">bitcoin network</a> as a universal payment processor ensures that anyone can fund who they want, anywhere in the world. Display the value of your pieces in any one of <b>20</b> <a href="/FAQ#how_does_currency_conversion_work">currencies</a>, on an interactive, funding <b>dashboard</b>. Fund projects in Visual Arts, Comics, Design, Dance, Education, Film and Video, Environment, Music, Fashion, Tech, Photography, Theatre, Food, Health, Writing and Lit, Sports, Small Business, Gaming, Crafts, and Journalism. 
 
           </p>
         </div>
@@ -281,7 +281,7 @@
         <div class="col-md-7">
           <h2 class="featurette-heading">Zero fees on a secure platform </h2>
           
-          <p class="lead">Security is paramount for both funders and creators, which is why Bitpieces has a 5 pillar <a href="/FAQ#how_do_i_know_if_a_creator_is_safe">security strategy</a>. <br><br>For funders, the experience of buying and trading pieces is entirely <b>free</b>. Far less than other crowdfunding sites, content-creators have a <b>1%</b> <a href="/FAQ#what_are_the_fees">fee</a> on withdrawals. When not using coinbase, your client may include <a href="http://bitcoinfees.com/">network fees</a> when you first buy pieces.
+          <p class="lead">Security is paramount for both funders and creators, which is why Bitpieces has a 5 pillar <a href="/FAQ#how_do_i_know_if_a_creator_is_safe">security strategy</a>. <br><br>For funders, the experience of buying and trading pieces is entirely <b>free</b>. Far less than other crowdfunding sites, content-creators have a <b>1%</b> <a href="/FAQ#what_are_the_fees">fee</a> on withdrawals. When not using <a href="https://coinbase.com/">coinbase</a>, your client may include <a href="http://bitcoinfees.com/">network fees</a> when you first buy pieces. 
           </p>
         </div>
       </div>
