--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -243,9 +243,9 @@
 
 
                   <div class="panel-body">
-                    <div class="discover-image">
+                    <div class="discover-image black-borders">
                     <a href="/creators/main/{{creators_name}}"> 
-                    <img class="img-responsive img-center remove-border black-borders" 
+                    <img class="img-responsive img-center remove-border" 
                       src="{{youtube_image_url}}"
                       alt="Generic placeholder image">
                       </a>
