--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -243,7 +243,7 @@
 
 
                   <div class="panel-body">
-                    <div class="discover-image black-borders">
+                    <div class="discover-image">
                     <a href="/creators/main/{{creators_name}}"> 
                     <img class="img-responsive img-center remove-border" 
                       src="{{youtube_image_url}}"
