--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -243,13 +243,11 @@
 
 
                   <div class="panel-body">
-                    <div class="discover-image">
-                    <a href="/creators/main/{{creators_name}}"> 
-                    <img class="img-responsive img-center remove-border" 
-                      src="{{youtube_image_url}}"
-                      alt="Generic placeholder image">
-                      </a>
-                    </div>
+                    <div style="width:100%; height: 400px;
+                        background: url('{{youtube_image_url}}') 
+                        background-size: cover;
+                        background-position: center bottom;
+                        no-repeat center 15% transparent;">&nbsp;</div>
 
 
 
