--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -243,11 +243,10 @@
 
 
                   <div class="panel-body">
-                    <div style="width:100%; height: 400px;
-                        background: url('{{youtube_image_url}}') 
+                    <div style="margin: width:100%; height: 200px;
+                        background: url('{{youtube_image_url}}') no-repeat center 15% transparent;
                         background-size: cover;
-                        background-position: center bottom;
-                        no-repeat center 15% transparent;">&nbsp;</div>
+                        background-position: center bottom;">&nbsp;</div>
 
 
 
