--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -246,7 +246,7 @@
                     <div style="margin: width:100%; height: 200px;
                         background: url('{{youtube_image_url}}') no-repeat center 15% transparent;
                         background-size: cover;
-                        background-position: center bottom;">&nbsp;</div>
+                        background-position: center center;">&nbsp;</div>
 
 
 
