--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -243,7 +243,7 @@
 
 
                   <div class="panel-body">
-                    <div style="margin: width:100%; height: 200px;
+                    <div style="margin: -15px; width:100%; height: 250px;
                         background: url('{{youtube_image_url}}') no-repeat center 15% transparent;
                         background-size: cover;
                         background-position: center center;">&nbsp;</div>
