--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -243,10 +243,13 @@
 
 
                   <div class="panel-body">
-                    <div class="discover-image" style="
-                        background: url('{{youtube_image_url}}') no-repeat center 15% transparent;
-                        background-size: cover;
-                        background-position: center center;">&nbsp;</div>
+                    <div class="discover-image">
+                    <a href="/creators/main/{{creators_name}}"> 
+                    <img class="img-responsive img-center remove-border" 
+                      src="{{youtube_image_url}}"
+                      alt="Generic placeholder image">
+                      </a>
+                    </div>
 
 
 
