--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -181,7 +181,7 @@
         <div id="what_is_bitpieces" class="row featurette">
          <div class="col-md-6">
           <div class="embed-responsive embed-responsive-4by3">
-           <iframe src="//www.youtube.com/embed/8nQXu2-Xbzo?rel=0&amp;theme=light&amp;modestbranding=1&amp;wmode=transparent&amp;showinfo=0" frameborder="0" allowfullscreen=""></iframe>
+           <iframe src="//www.youtube.com/embed/8nQXu2-Xbzo?rel=0&amp;controls=2;theme=light&amp;modestbranding=1&amp;wmode=transparent&amp;showinfo=0" frameborder="0" allowfullscreen=""></iframe>
          </div>
        </div>
        <div class="col-md-6">
