trying out embed instead

--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -243,12 +243,8 @@
 
 
                   <div class="panel-body">
-                    <div class="discover-image">
-                    <a href="/creators/main/{{creators_name}}"> 
-                    <img class="img-responsive img-center remove-border" 
-                      src="{{youtube_image_url}}"
-                      alt="Generic placeholder image">
-                      </a>
+                    <div class="embed-responsive embed-responsive-4by3">
+                      <iframe src="//www.youtube.com/embed/{{youtube_shortcode}}?rel=0&amp;controls=2;theme=light&amp;modestbranding=1&amp;wmode=transparent&amp;showinfo=0" frameborder="0" allowfullscreen=""></iframe>
                     </div>
 
 
