--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -243,7 +243,7 @@
 
 
                   <div class="panel-body">
-                    <div class="embed-responsive embed-responsive-4by3">
+                    <div class="embed-responsive embed-responsive-4by3 neg-margins">
                       <iframe src="//www.youtube.com/embed/{{youtube_shortcode}}?rel=0&amp;controls=2;theme=light&amp;modestbranding=1&amp;wmode=transparent&amp;showinfo=0" frameborder="0" allowfullscreen=""></iframe>
                     </div>
 
