--- a/resources/web/about.html
+++ b/resources/web/about.html
@@ -167,9 +167,13 @@
      <!-- FOOTER -->
      <hr class="featurette-divider">
      <footer>
-      <p class="pull-right"><a href="#">Back to top</a></p>
-      <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="/about">About</a> &middot; <a href="/contact">Contact</a>
-        &middot; <a href="/FAQ">Support</a> &middot; <a href="https://github.com/tchoulihan/bitpieces">Github</a></p>
+  <p>&copy; 2014 Bitpieces, Inc. &middot; 
+    <a href="/about">About</a> &middot; 
+    <a href="/contact">Contact</a> &middot; 
+    <a href="/FAQ">Support</a> &middot; 
+    <a href="https://github.com/tchoulihan/bitpieces"><i class="fa fa-github fa-2x"></i></a> &middot; 
+    <a href="https://twitter.com/Bitpieces"><i class="fa fa-twitter fa-2x"></i></a> &middot; 
+  </p>
       </footer>
       
     </div>
