--- a/resources/web/creator_settings.html
+++ b/resources/web/creator_settings.html
@@ -75,7 +75,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/discover">Discover</a></li>
         <li><a href="/creators_register">Start</a></li> 
-        <li class="active"><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
+        <li><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
                <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
                <li><a href="#logout" class="hide">Log Out</a></li> -->
         <li class="dropdown">
@@ -269,7 +269,17 @@
 </script>
 </div>
 
-
+     <!-- FOOTER -->
+     <hr class="featurette-divider">
+     <footer>
+  <p>&copy; 2014 Bitpieces, Inc. &middot; 
+    <a href="/about">About</a> &middot; 
+    <a href="/contact">Contact</a> &middot; 
+    <a href="/FAQ">Support</a> &middot; 
+    <a href="https://github.com/tchoulihan/bitpieces"><i class="fa fa-github fa-2x"></i></a> &middot; 
+    <a href="https://twitter.com/Bitpieces"><i class="fa fa-twitter fa-2x"></i></a> &middot; 
+  </p>
+      </footer>
 
 </div>
 </div>
