--- a/resources/web/userdashboard_settings.html
+++ b/resources/web/userdashboard_settings.html
@@ -257,7 +257,17 @@
 </script>
 </div>
 
-
+     <!-- FOOTER -->
+     <hr class="featurette-divider">
+     <footer>
+  <p>&copy; 2014 Bitpieces, Inc. &middot; 
+    <a href="/about">About</a> &middot; 
+    <a href="/contact">Contact</a> &middot; 
+    <a href="/FAQ">Support</a> &middot; 
+    <a href="https://github.com/tchoulihan/bitpieces"><i class="fa fa-github fa-2x"></i></a> &middot; 
+    <a href="https://twitter.com/Bitpieces"><i class="fa fa-twitter fa-2x"></i></a> &middot; 
+  </p>
+      </footer>
 </div>
 <!-- end of wrapper -->
 
