--- a/resources/web/userdashboard_settings.html
+++ b/resources/web/userdashboard_settings.html
@@ -163,7 +163,7 @@
       </div>
     </div><!-- /.row -->
 
-    <div id="users_settings" class="row col-md-12">
+    <div id="users_settings" class="row col-md-6">
      <script id="users_settings_template" type="x-tmpl-mustache"> 
       <h3> Users Settings </h3>
       <hr></hr>
@@ -256,7 +256,7 @@
 </form>
 </script>
 </div>
-
+  <div class="row">
      <!-- FOOTER -->
      <hr class="featurette-divider">
      <footer>
@@ -268,6 +268,7 @@
     <a href="https://twitter.com/Bitpieces"><i class="fa fa-twitter fa-2x"></i></a> &middot; 
   </p>
       </footer>
+      </div>
 </div>
 <!-- end of wrapper -->
 
