--- a/resources/web/userdashboard_settings.html
+++ b/resources/web/userdashboard_settings.html
@@ -257,6 +257,7 @@
 </script>
 </div>
   <div class="row">
+    <div class="col-md-12">
      <!-- FOOTER -->
      <hr class="featurette-divider">
      <footer>
@@ -268,6 +269,7 @@
     <a href="https://twitter.com/Bitpieces"><i class="fa fa-twitter fa-2x"></i></a> &middot; 
   </p>
       </footer>
+      </div>
       </div>
 </div>
 <!-- end of wrapper -->
