--- a/resources/testweb/userdashboard_settings.html
+++ b/resources/testweb/userdashboard_settings.html
@@ -256,18 +256,21 @@
 </form>
 </script>
 </div>
-
-     <!-- FOOTER -->
-     <hr class="featurette-divider">
-     <footer>
-  <p>&copy; 2014 Bitpieces, Inc. &middot; 
-    <a href="/about">About</a> &middot; 
-    <a href="/contact">Contact</a> &middot; 
-    <a href="/FAQ">Support</a> &middot; 
-    <a href="https://github.com/tchoulihan/bitpieces"><i class="fa fa-github fa-2x"></i></a> &middot; 
-    <a href="https://twitter.com/Bitpieces"><i class="fa fa-twitter fa-2x"></i></a> &middot; 
-  </p>
-      </footer>
+<div class="row">
+  <div class="col-md-12">
+   <!-- FOOTER -->
+   <hr class="featurette-divider">
+   <footer>
+    <p>&copy; 2014 Bitpieces, Inc. &middot; 
+      <a href="/about">About</a> &middot; 
+      <a href="/contact">Contact</a> &middot; 
+      <a href="/FAQ">Support</a> &middot; 
+      <a href="https://github.com/tchoulihan/bitpieces"><i class="fa fa-github fa-2x"></i></a> &middot; 
+      <a href="https://twitter.com/Bitpieces"><i class="fa fa-twitter fa-2x"></i></a> &middot; 
+    </p>
+  </footer>
+</div>
+</div>
 </div>
 <!-- end of wrapper -->
 
