--- a/resources/web/creator_main.html
+++ b/resources/web/creator_main.html
@@ -296,7 +296,7 @@
     <!-- A centered panel -->
     <div class="row">
       <div class="col-md-12">
-        <div class="embed-responsive embed-responsive-16by9">
+        <div id="videoFrame" class="embed-responsive embed-responsive-16by9">
               <iframe id="youtubeFrame" 
               frameborder="0" allowfullscreen="">
               </iframe>
