user interface image on main now clickable

--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -275,7 +275,7 @@
 
       <div class="row featurette">
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="img/btc1.jpg" alt="Generic placeholder image">
+          <a href="/users/overview/testuser"><img class="featurette-image img-responsive" src="img/btc1.jpg" alt="Generic placeholder image"></a>
          
         </div>
         <div class="col-md-7">
