--- a/resources/web/landing.html
+++ b/resources/web/landing.html
@@ -267,7 +267,7 @@
           </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="img/user_interface2.png" alt="Generic placeholder image">
+          <a href="/users/overview/testuser"><img class="featurette-image img-responsive" src="img/user_interface2.png" alt="Generic placeholder image"></a>
         </div>
       </div>
 
@@ -275,7 +275,7 @@
 
       <div class="row featurette">
         <div class="col-md-5">
-          <a href="/users/overview/testuser"><img class="featurette-image img-responsive" src="img/btc1.jpg" alt="Generic placeholder image"></a>
+          <img class="featurette-image img-responsive" src="img/btc1.jpg" alt="Generic placeholder image">
          
         </div>
         <div class="col-md-7">
