--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -154,7 +154,7 @@
           <div class="item">
             <div class="900-image" align="center">
               <!-- <img src="img/group3.jpg" alt="Third slide"> -->
-              <div style="width:100%; height: 400px; background: url('img/group3.jpg') no-repeat center 15% transparent;">&nbsp;</div>
+              <div style="width:100%; height: 400px; background: url('img/bitpieces_img_2.jpg') no-repeat center 15% transparent;">&nbsp;</div>
             </div>
             <div class="container">
               <div class="carousel-caption">
