some changes to the landing

--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -131,7 +131,7 @@
             </div>
             <div class="container">
               <div class="carousel-caption">
-                <h1><b>The next generation of crowd funding is here</b></h1>
+                <h1><b>An Open-source, Bitcoin-backed Stock Market</b></h1>
                 <p></p>
                 <p><a class="btn btn-lg btn-primary" href="#" 
                   data-toggle="modal" data-target="#userloginModal" role="button">Sign up</a></p>
@@ -145,7 +145,7 @@
              </div>
              <div class="container">
               <div class="carousel-caption">
-                <h1><b>Helping content creators do what they do best</b></h1>
+                <h1><b>Own pieces of your favorite brands and content-creators</b></h1>
                 <p></p>
                 <p><a class="btn btn-lg btn-primary" href="#fund_creativity" role="button">Learn more</a></p>
               </div>
@@ -158,7 +158,7 @@
             </div>
             <div class="container">
               <div class="carousel-caption">
-                <h1><b>Get creative projects in motion</b></h1>
+                <h1><b>Watch the rewards grow in your account, automatically, and continuously</b></h1>
                 <p></p>
                 <p><a class="btn btn-lg btn-primary" href="/discover" role="button">Discover</a></p>
               </div>
