changing main page titles

--- a/resources/web/landing.html
+++ b/resources/web/landing.html
@@ -131,7 +131,7 @@
             </div>
             <div class="container">
               <div class="carousel-caption">
-                <h1><b>The next generation of crowd funding is here</b></h1>
+                <h1><b>An Open-source, Bitcoin-backed Stock Market</b></h1>
                 <p></p>
                 <p><a class="btn btn-lg btn-primary" href="#" 
                   data-toggle="modal" data-target="#userloginModal" role="button">Sign up</a></p>
@@ -145,7 +145,7 @@
              </div>
              <div class="container">
               <div class="carousel-caption">
-                <h1><b>Helping content creators do what they do best</b></h1>
+                <h1><b>Own pieces of your favorite brands and content-creators</b></h1>
                 <p></p>
                 <p><a class="btn btn-lg btn-primary" href="#fund_creativity" role="button">Learn more</a></p>
               </div>
@@ -154,11 +154,11 @@
           <div class="item">
             <div class="900-image" align="center">
               <!-- <img src="img/group3.jpg" alt="Third slide"> -->
-              <div style="width:100%; height: 400px; background: url('img/group3.jpg') no-repeat center 15% transparent;">&nbsp;</div>
+              <div style="width:100%; height: 400px; background: url('img/bitpieces_img_2.jpg') no-repeat center 15% transparent;">&nbsp;</div>
             </div>
             <div class="container">
               <div class="carousel-caption">
-                <h1><b>Get creative projects in motion</b></h1>
+                <h1><b>Watch the rewards grow in your account, automatically, and continuously</b></h1>
                 <p></p>
                 <p><a class="btn btn-lg btn-primary" href="/discover" role="button">Discover</a></p>
               </div>
@@ -188,7 +188,7 @@
          <br>
          <h2 class="featurette-heading">What is Bitpieces? </h2>
          <br>
-         <p class="lead"> <a href="/FAQ">Bitpieces</a> is an <b>open source</b> crowd-funding platform that gives content <a href="/FAQ#what_is_a_creator">creators</a>, small businesses, and community projects a way to raise funding by <a href="/FAQ#what_are_pieces">selling pieces</a> of their brand, and sharing profits with their funders through monetary <a href="/FAQ#what_are_rewards">rewards</a> over time. 
+         <p class="lead"> <a href="/users/overview/Bitpieces">Bitpieces</a> is an <b>open source</b> crowd-funding platform that gives content <a href="/FAQ#what_is_a_creator">creators</a>, small businesses, and community projects a way to raise funding by <a href="/FAQ#what_are_pieces">selling pieces</a> of their brand, and sharing profits with their funders through monetary <a href="/FAQ#what_are_rewards">rewards</a> over time. 
          </p>
        </div>
 
